// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/manager/npm/post-update/pnpm catches errors 1`] = `
[
  {
    "cmd": "pnpm install --recursive --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/npm/post-update/pnpm finds pnpm globally 1`] = `
[
  {
    "cmd": "pnpm install --recursive --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/npm/post-update/pnpm generates lock files 1`] = `
[
  {
    "cmd": "pnpm install --recursive --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/npm/post-update/pnpm performs lock file maintenance 1`] = `
[
  {
    "cmd": "pnpm install --recursive --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/npm/post-update/pnpm uses constraint version if parent json has constraints 1`] = `
[
  {
    "cmd": "pnpm install --recursive --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": {
      "cwd": "some-folder",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/npm/post-update/pnpm uses packageManager version and puts it into constraint 1`] = `
[
  {
    "cmd": "pnpm install --recursive --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": {
      "cwd": "some-folder",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`modules/manager/npm/post-update/pnpm uses the new version if packageManager is updated 1`] = `
[
  {
    "cmd": "pnpm install --recursive --lockfile-only --ignore-scripts --ignore-pnpmfile",
    "options": {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;
